Jump fix

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -1161,6 +1161,11 @@ table code {
   width: 100%;
   height: 41.25rem;
   text-align: center;
+  visibility: hidden;
+}
+
+.carousel-cell.is-selected {
+  visibility: visible;
 }
 
 .carousel-cell h1 {
